--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,37 @@
-# Node modules
+# ──────────────
+# Backend
+# ──────────────
 backend/node_modules/
-frontend/node_modules/
-
-# Build output
-frontend/build/
-
-# Environment variables
 backend/.env
 
-# Log files
-*.log
+# ──────────────
+# Frontend
+# ──────────────
+frontend/node_modules/
+frontend/build/
+frontend/.pnp
+frontend/pnp.js
+frontend/coverage
 
-# OS & editor files
-.DS_Store
+# ──────────────
+# Environment Files
+# ──────────────
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ──────────────
+# Logs
+# ──────────────
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ──────────────
+# System/Editor
+# ──────────────
+.DS_Store
 .vscode/
